configuración base de datos

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://postgres:escandinava@localhost:5432/nextstep?schema=public"
+DATABASE_URL=postgresql://postgres:XuGcQvabYbLPBKpukhidiWLAvzeikqAc@crossover.proxy.rlwy.net:27541/railway
 PORT=4000
