--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js",
+    "start": "npx prisma migrate deploy && node src/app.js",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:generate": "npx prisma generate",
-    "prisma:studio": "npx prisma studio"
+    "prisma:studio": "npx prisma studio",
+    "prisma:migrate:deploy": "npx prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
